Make sure that removing a problem doesn't break the UI, nor does adding a problem while sorting. Fixes #43. Fixes #44.

--- a/css/style.css
+++ b/css/style.css
@@ -433,6 +433,10 @@ div#exercise-page {
 	right: 0px;
 }
 
+#exercise-page #tests textarea {
+	margin-bottom: 10px;
+}
+
 #exercise-page .editor-form {
 	margin-right: 315px;
 	display: block;
